added some new features

--- a/src/SimpleUniversalWebserver/SimpleUniversalWebserver/SimpleUniversalWebserver.csproj
+++ b/src/SimpleUniversalWebserver/SimpleUniversalWebserver/SimpleUniversalWebserver.csproj
@@ -113,13 +113,21 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Errors\HttpStatusException.cs" />
     <Compile Include="Errors\SimpleErrorPage.cs" />
     <Compile Include="Errors\DefaultErrorPages.cs" />
     <Compile Include="Extensions\HttpExtensions.cs" />
+    <Compile Include="MessageHandler\BaseMessageHandler.cs" />
+    <Compile Include="MessageHandler\IMessageHandler.cs" />
+    <Compile Include="MessageHandler\RestMessageHandler.cs" />
+    <Compile Include="MessageHandler\SimpleMessaageHandler.cs" />
+    <Compile Include="MessageSerializer\JsonNetMessageSerializer.cs" />
     <Compile Include="Net\HttpServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MessageSerializer\IMessageSerializer.cs" />
     <Content Include="Properties\SimpleUniversalWebserver.rd.xml" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
